Fix for calendar layout issue

--- a/src/layouts/_layouts.scss
+++ b/src/layouts/_layouts.scss
@@ -805,8 +805,6 @@ body.no-scroll {
 
 // Banner Detail Pattern
 .page-container {
-  @include font-size(16);
-
   .banner-detail {
     min-height: 100%;
     position: relative;
